--- a/src/docsrc/manual.tex.in
+++ b/src/docsrc/manual.tex.in
@@ -71,7 +71,7 @@ document the \reallive\ system: Jagarl, on whose \opus{scn2kdump} utility, now
 developed into \opus{xclannad}, I built much of my work; roxfan, whose 
 additional reverse-engineering work has revealed the details of the DLL plugin 
 system and many other built-in functions and functionality; Ed Keyes of insani, 
-who tested an earlier version to its limits with Planetarian, also generously 
+who tested an earlier version to its limits with \opus{Planetarian}, also generously 
 giving permission for me to incorporate his g00 compression code into 
 \converter; Soulfang, my other user, who spurred me to develop the program in 
 the first place; and, not least, the careless programmers of \reallive\ games 
