--- a/src/docsrc/manual.tex.in
+++ b/src/docsrc/manual.tex.in
@@ -73,11 +73,11 @@ additional reverse-engineering work has revealed the details of the DLL plugin
 system and many other built-in functions and functionality; Ed Keyes of insani, 
 who tested an earlier version to its limits with \opus{Planetarian}, also generously 
 giving permission for me to incorporate his \file{g00} compression code into 
-\converter; Soulfang, my other user, who spurred me to develop the program in 
-the first place; and, not least, the careless programmers of \reallive\ games 
-themselves, whose consistent and inexplicable failure to remove vast quantities 
-of debugging code from their software on release has been \emph{extremely} 
-enlightening.
+\converter; Soulfang, my first user, who spurred me to develop the program into
+something more than a toy; and, not least, the careless programmers of \reallive\ 
+games themselves, whose consistent and inexplicable failure to remove vast 
+quantities of debugging code from their software on release has been 
+\emph{extremely} enlightening.
 
 \ifhevea
   \@print{<H1 CLASS="chapter">}\aname{pref}{Preface}\@print{</H1>}
