--- a/src/docsrc/manual.tex.in
+++ b/src/docsrc/manual.tex.in
@@ -76,7 +76,7 @@ giving permission for me to incorporate his \file{g00} compression code into
 \converter; Soulfang, my first user, who spurred me to develop the program into
 something more than a toy; and, not least, the careless programmers of \reallive\ 
 games themselves, whose consistent and inexplicable failure to remove vast 
-quantities of debugging code from their programs on release has been 
+quantities of debugging code from their software on release has been 
 \emph{extremely} enlightening.
 
 \ifhevea
