Computer Modern is ugly. Utopia is bearable.
git-svn-id: http://svn.haeleth.net/pub/rldev@138 8d5b77e3-600c-0410-b16e-99778ea16b4f

--- a/src/docsrc/manual.tex.in
+++ b/src/docsrc/manual.tex.in
@@ -9,6 +9,7 @@
 \newif\ifhevea\heveafalse
 \usepackage{mdwlist,multicol}
 \usepackage[british]{babel}
+\usepackage{fourier,courier}
 %END LATEX
 %HEVEA \usepackage{color}
 %HEVEA \input{urlhref.hva}
